# digital-certificates

./: .gitmodules  CMakeLists.txt  README.md
app/: generate.cxx  sign.cxx  verify.cxx
include/: config.hpp  crypto.hpp  file.hpp
src/: crypto.cpp  file.cpp
